add adapter to production

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,7 @@ staging:
   url: <%= ENV['DATABASE_URL'] %>
 
 production:
+  <<: *default
   url: <%= ENV['DATABASE_URL'] %>
   pool: <%= ENV['DB_POOL'] || ENV['MAX_THREADS'] || 5 %>
   statement_limit: <%= ENV['STATEMENT_LIMIT'].presence || 1000 %>
